<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Weather Prophet v0.02</string>
    <string name="app_name">WeatherProphet</string>
    <string name="wake_up">Wake Up!</string>
    <string name="stop_alarm">Stop Alarm Now!</string>
    <string name="base_hour">Set your wake up hour</string>
    <string name="time_offset">Set offset</string>
    <string name="minutes">5</string>
    <string name="activate">Activate Wake Up Call</string>
    <string name="save">Save Preferences</string>
    <string name="notification">Show notification icon</string>
    <string name="login">Log In</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="rainalarm">Rain Alarm</string>    
    <string name="activaterainalarm">Activate Rain Alarm</string>
    <string name="ifrain">If rain probability is higer than</string>
    <string name="wakeme">Wake me earlier</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="sendmail">Send me an email the day before</string>
    <string name="prevision">Weather prevision for today</string>
    <string name="wipe">Wipe settings from device</string>
    <string name="wipe_desc">This will delete all your settings. Use with care!</string>
    <string name="about">About</string>
    <string name="web">http://weatherprophet.kaleidos.net</string>
    <string name="close">Close</string>
    <string name="kaleidos">Created by Kaleidos</string>
    <string name="weatherprophet">Weather Prophet</string>
    <string name="version">v0.02</string>
    <string name="kaleidos_web">http://kaleidos.net</string>
    <string name="snooze">Sleep 10 more minutes&#8230;</string>
    <string name="set_sound">Set Wake Up Alarm sound</string>
    <string name="sound">Sound</string>
    <string name="wipe_confirm">Are you sure?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    
    

</resources>